mi primer commit 1.1

--- a/Dibujo.html
+++ b/Dibujo.html
@@ -11,7 +11,7 @@
       <input type="button" value="A darle" id = "boton"/>
       </p>
       <canvas width="300" height="300" id="dibujito"></canvas>
-      <p>Asi quedó el dibujo</p>
+      <p>Asi quedó tu dibujo</p>
       <script src="dibujo.js"></script>
     </body>
 </html>
